--- a/daqar.html
+++ b/daqar.html
@@ -237,12 +237,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
       </p>
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.2.1 </span>Property: ReturnType</h4>
+        <h4><span class="secno">3.2.1 </span>Property: hasReturnType</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ReturnType">dqr:ReturnType</a></th>
+              <th><a name="hasReturnType">dqr:hasReturnType</a></th>
             </tr>
           </thead>
           <tbody>
@@ -777,12 +777,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
       </p>
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.6.1 </span>Property: ReturnType</h4>
+        <h4><span class="secno">3.6.1 </span>Property: hasReturnType</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ReturnType">dqr:ReturnType</a></th>
+              <th><a name="hasReturnType">dqr:hasReturnType</a></th>
             </tr>
           </thead>
           <tbody>
@@ -809,12 +809,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
 	  
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.6.2 </span>Property: ReturnValue</h4>
+        <h4><span class="secno">3.6.2 </span>Property: hasReturnValue</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ReturnValue">dqr:ReturnValue</a></th>
+              <th><a name="hasReturnValue">dqr:hasReturnValue</a></th>
             </tr>
           </thead>
           <tbody>
@@ -908,12 +908,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
       </p>
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.7.1 </span>Property: ValueLowerThan</h4>
+        <h4><span class="secno">3.7.1 </span>Property: hasValueLowerThan</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ValueLowerThan">dqr:ValueLowerThan</a></th>
+              <th><a name="hasValueLowerThan">dqr:hasValueLowerThan</a></th>
             </tr>
           </thead>
           <tbody>
@@ -944,12 +944,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
 	  
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.7.2 </span>Property: ValueLowerEqualThan</h4>
+        <h4><span class="secno">3.7.2 </span>Property: hasValueLowerEqualThan</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ValueLowerEqualThan">dqr:ValueLowerEqualThan</a></th>
+              <th><a name="hasValueLowerEqualThan">dqr:hasValueLowerEqualThan</a></th>
             </tr>
           </thead>
           <tbody>
@@ -980,12 +980,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
 
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.7.3 </span>Property: ValueGreaterThan</h4>
+        <h4><span class="secno">3.7.3 </span>Property: hasValueGreaterThan</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ValueGreaterThan">dqr:ValueGreaterThan</a></th>
+              <th><a name="hasValueGreaterThan">dqr:hasValueGreaterThan</a></th>
             </tr>
           </thead>
           <tbody>
@@ -1016,12 +1016,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
 
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.7.4 </span>Property: ValueGreaterEqualThan</h4>
+        <h4><span class="secno">3.7.4 </span>Property: hasValueGreaterEqualThan</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ValueGreaterEqualThan">dqr:ValueGreaterEqualThan</a></th>
+              <th><a name="hasValueGreaterEqualThan">dqr:hasValueGreaterEqualThan</a></th>
             </tr>
           </thead>
           <tbody>
@@ -1143,9 +1143,9 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
               <td class="prop">Note:</td>
               <td>This property specifies the mathematical function how to map a measured value to an assessment value. The class dqr:FunctionType currently contains the concepts<br/>
 			  <ul>
-			  <li>dqr:LinearFunction - defined through a dqr:StartValue and dqr:EndValue</li>
-			  <li>dqr:ConstantFunction - defined through a dqr:ReturnValue</li>
-			  <li>dqr:CustomFunction - defined through a dqr:CustomFunctionTerm</li>
+			  <li>dqr:LinearFunction - defined through a dqr:hasStartValue and dqr:hasEndValue</li>
+			  <li>dqr:ConstantFunction - defined through a dqr:hasReturnValue</li>
+			  <li>dqr:CustomFunction - defined through a dqr:hasCustomFunctionTerm</li>
 			  </ul>
 			  and is open for future extensions. It can also be considered to represent this concept through other appropriate existing vocabularies.
 			  </td>
@@ -1218,12 +1218,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
       </p>
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.9.1 </span>Property: StartValue</h4>
+        <h4><span class="secno">3.9.1 </span>Property: hasStartValue</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="StartValue">dqr:StartValue</a></th>
+              <th><a name="hasStartValue">dqr:hasStartValue</a></th>
             </tr>
           </thead>
           <tbody>
@@ -1251,12 +1251,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
       </section>	  
 	  		  
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.9.2 </span>Property: EndValue</h4>
+        <h4><span class="secno">3.9.2 </span>Property: hasEndValue</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="EndValue">dqr:EndValue</a></th>
+              <th><a name="hasEndValue">dqr:hasEndValue</a></th>
             </tr>
           </thead>
           <tbody>
@@ -1284,12 +1284,12 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
       </section>	
 
       <section typeof="bibo:Chapter" property="bibo:hasPart">
-        <h4><span class="secno">3.9.3 </span>Property: ReturnValue</h4>
+        <h4><span class="secno">3.9.3 </span>Property: hasReturnValue</h4>
         <table class="definition">
           <thead>
             <tr>
               <th>RDF Property:</th>
-              <th><a name="ReturnValue">dqr:ReturnValue</a></th>
+              <th><a name="hasReturnValue">dqr:hasReturnValue</a></th>
             </tr>
           </thead>
           <tbody>
@@ -1372,8 +1372,8 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
  <pre>
 :assessment1
 	a dqr:QualityAssessment ;
-	dqr:ReturnType dqr:QualityRatio ;
-	dqr:ReturnValue dqr:FunctionalValue ;
+	dqr:hasReturnType dqr:QualityRatio ;
+	dqr:hasReturnValue dqr:FunctionalValue ;
 	dqr:hasCondition [
 		a dqr:AssessmentCondition ;
 		dqr:ValueLowerThan "0.0"^^xsd:double ;
@@ -1388,29 +1388,29 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
 	]
 	dqr:hasCondition [
 		a dqr:AssessmentCondition ;
-		dqr:ValueGreaterEqualThan "0.0"^^xsd:double ;
-		dqr:ValueLowerEqualThan "2.0"^^xsd:double ;
+		dqr:hasValueGreaterEqualThan "0.0"^^xsd:double ;
+		dqr:hasValueLowerEqualThan "2.0"^^xsd:double ;
 		dqr:hasAssessmentFunction [
 			a dqr:AssessmentFunction ;
 			dqr:hasFunctionType dqr:LinearFunction ;
 			dqr:hasFunctionParam [
 				a dqr:FunctionParam ;
-				dqr:StartValue "1.0"^^xsd:double
+				dqr:hasStartValue "1.0"^^xsd:double
 			], [
 				a dqr:FunctionParam ;
-				dqr:EndValue "0.0"^^xsd:double
+				dqr:hasEndValue "0.0"^^xsd:double
 			]
 		]
 	]		
 	dqr:hasCondition [
 		a dqr:AssessmentCondition ;
-		dqr:ValueGreaterThan "2.0"^^xsd:double ;
+		dqr:hasValueGreaterThan "2.0"^^xsd:double ;
 		dqr:hasAssessmentFunction [
 			a dqr:AssessmentFunction ;
 			dqr:hasFunctionType dqr:ConstantFunction ;
 			dqr:hasFunctionParam [
 				a dqr:FunctionParam ;
-				dqr:ReturnValue "0.0"^^xsd:double 
+				dqr:hasReturnValue "0.0"^^xsd:double 
 			]
 		]
 	]		
@@ -1449,7 +1449,7 @@ primarily DCAT and DQV. It includes the following concepts depicted in figure 1.
  <pre>
 :OverallAssessment	
 	a dqr:QualityAssessmentCombination ;
-	dqr:ReturnType dqr:QualityRatio ;
+	dqr:hasReturnType dqr:QualityRatio ;
 	dqr:hasAssessmentTerms [
 		a dqr:QualityAssessmentTerm ;
 		dqr:hasWeight "0.6"xsd:double ;
